--- a/website/pages/docs/plugins/sources/overview.mdx
+++ b/website/pages/docs/plugins/sources/overview.mdx
@@ -26,6 +26,7 @@ Official source plugins follow [release stages](#source-plugin-release-stages).
             { name: "GitLab", stage: "Preview" },
             { name: "Hacker News", stage: "Preview", id: `hackernews` },
             { name: "Heroku", stage: "Preview" },
+            { name: "HubSpot", stage: "Preview" },
             { name: "k8s", stage: "Preview" },
             { name: "Okta", stage: "Preview" },
             { name: "Oracle", stage: "Preview" },
