--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -17,9 +17,9 @@ for further analysis.
 
 ## Why CloudQuery?
 
-- **Open source**: Easily extensible plugin architecture. Contribute to our official plugins or develop your own with CloudQuery SDK.
+- **Open source**: Easily extendable plugin architecture. Contribute to our official plugins or develop your own with CloudQuery SDK.
 - **Blazing fast**: CloudQuery concurrency system utilizes the excellent Go concurrency model with light-weight goroutines.
 - **Deploy anywhere**: CloudQuery plugins are single binary executables and can be deployed and run anywhere.
 - **Pre-built queries**: CloudQuery maintains number of out-of-the-box security and compliance policies for cloud infrastructure.
-- **Elimnate data silos**: Elimnate data silos across your organization, security, infrastructure, marketing and finance teams.
-- **Unlimited scale**: CloudQuery plugins are statless and can scaled easily horizontally on any executor such as k8s, batch jobs.
+- **Eliminate data silos**: Eliminate data silos across your organization, security, infrastructure, marketing and finance teams.
+- **Unlimited scale**: CloudQuery plugins are stateless and can scaled easily horizontally on any executor such as k8s, batch jobs.
