--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -18,7 +18,7 @@ for further analysis.
 ## Why CloudQuery?
 
 - **Open source**: Easily extendable plugin architecture. Contribute to our official plugins or develop your own with CloudQuery SDK.
-- **Blazing fast**: CloudQuery concurrency system utilizes the excellent Go concurrency model with light-weight goroutines.
+- **Blazing fast**: CloudQuery is optimized for performance, utilizing the excellent Go concurrency model with light-weight goroutines.
 - **Deploy anywhere**: CloudQuery plugins are single binary executables and can be deployed and run anywhere.
 - **Pre-built queries**: CloudQuery maintains number of out-of-the-box security and compliance policies for cloud infrastructure.
 - **Eliminate data silos**: Eliminate data silos across your organization, security, infrastructure, marketing and finance teams.
