--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -9,7 +9,7 @@ import Features from "../../components/Features";
 <Features page="docs" detailed={false} />
 
 CloudQuery is an [open-source](https://github.com/cloudquery/cloudquery),
-high-performance data integration built for developers.
+high-performance data integration framework built for developers.
 
 CloudQuery extracts, transforms, and loads configuration from cloud APIs to
 variety of supported destinations such as databases, data lakes, or streaming platforms
