--- a/website/pages/index.mdx
+++ b/website/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: CloudQuery | An open source high performance data integration platform for developers
-description: Sync any source assets to any database, transform and visualize
+description: Sync any source to any database, transform and visualize
 ---
 
 import Home from "../components/pages/home";
