fix(website): Add Plausible Analytics to meta.json

--- a/website/pages/docs/plugins/sources/overview.mdx
+++ b/website/pages/docs/plugins/sources/overview.mdx
@@ -42,6 +42,7 @@ Official source plugins follow [release stages](#source-plugin-release-stages).
             { name: "Vercel", stage: "Preview" },
             { name: "Snyk", stage: "Preview" },
             { name: "Azure DevOps", stage: "Preview", id: `azuredevops` },
+            { name: "Plausible Analytics", stage: "Preview", id: `plausible` },
         ]
     }
 />
@@ -49,7 +50,7 @@ Official source plugins follow [release stages](#source-plugin-release-stages).
 ## Community
 
 | **Name**                                                     |
-|--------------------------------------------------------------|
+| ------------------------------------------------------------ |
 | [Yandex](https://github.com/yandex-cloud/cq-provider-yandex) |
 
 ## Source Plugin Release Stages
@@ -70,4 +71,3 @@ For version `Major.Minor.Patch`:
 - `Major` is incremented when there are breaking changes (e.g. breaking configuration spec structure, column type changes).
 - `Minor` is incremented when we add features in a backwards compatible way.
 - `Patch` is incremented when we fix bugs in a backwards compatible way.
-
