Add docs and .github

--- a/website/pages/docs/plugins/destinations/overview.mdx
+++ b/website/pages/docs/plugins/destinations/overview.mdx
@@ -18,6 +18,7 @@ This is a list of all official and community destination plugins.
             { name: "BigQuery", stage:"Preview" },
             { name: "CSV", stage:"Deprecated(Use File)" },
             { name: "File", stage:"Preview" },
+            { name: "Firehose", stage:"Preview" },
             { name: "GCS", stage:"Preview" },
             { name: "Kafka", stage:"Preview" },
             { name: "MongoDB", stage:"Preview" },
