Small CR issues

--- a/website/pages/docs/plugins/sources/overview.mdx
+++ b/website/pages/docs/plugins/sources/overview.mdx
@@ -27,6 +27,7 @@ Official source plugins follow [release stages](#source-plugin-release-stages).
             { name: "Hacker News", stage: "Preview", id: `hackernews` },
             { name: "Heroku", stage: "Preview" },
             { name: "k8s", stage: "Preview" },
+            { name: "LaunchDarkly", stage: "Preview" },
             { name: "Okta", stage: "Preview" },
             { name: "Oracle", stage: "Preview" },
             { name: "Terraform", stage: "Preview" },
