chore(wesbite): Add Mixpanel to source plugins overview (#7112)
#### Summary

It was missing from our list https://www.cloudquery.io/docs/plugins/sources/overview

<!--

--- a/website/pages/docs/plugins/sources/overview.mdx
+++ b/website/pages/docs/plugins/sources/overview.mdx
@@ -44,6 +44,7 @@ Official source plugins follow [release stages](#source-plugin-release-stages).
             { name: "Snyk", stage: "Preview" },
             { name: "Azure DevOps", stage: "Preview", id: `azuredevops` },
             { name: "Plausible Analytics", stage: "Preview", id: `plausible` },
+            { name: "Mixpanel", stage: "Preview" },
         ]
     }
 />
