Add note about title

--- a/website/pages/how-to-guides/how-to-load-infrastructure-data-into-athena.mdx
+++ b/website/pages/how-to-guides/how-to-load-infrastructure-data-into-athena.mdx
@@ -70,7 +70,7 @@ This is the most basic configuration of the AWS source plugin. It will work as l
 
 ## Step 4: Configure the S3 Destination Plugin
 
-Similar to the config we created for the AWS plugin, we also need a destination config that is configured to write the AWS data to JSON files in S3:
+Similar to the config we created for the AWS plugin, we also need a destination config that is configured to write the AWS data to JSON files in S3. We'll call this file `s3.yml`:
 
 ```yaml copy
 kind: destination
