--- a/website/pages/docs/plugins/sources/hubspot/overview.mdx
+++ b/website/pages/docs/plugins/sources/hubspot/overview.mdx
@@ -10,8 +10,9 @@ The CloudQuery HubSpot plugin extracts HubSpot information into your destination
 
 <Callout type="warning">
 
-The HubSpot API is heavily [rate limited](https://developers.hubspot.com/docs/api/usage-details#rate-limits). If you encounter 
-rate limit errors when running the HubSpot plugin, please let us know by opening an issue on our [GitHub repository](https://github.com/cloudquery/cloudquery) or by contacting us on [Discord](https://www.cloudquery.io/discord).
+The HubSpot REST API is [rate limited](https://developers.hubspot.com/docs/api/usage-details#rate-limits).
+By default, CloudQuery makes up to 5 API requests per second - but you may need to increase/decrease this value depending on your HubSpot subscription.
+You can use the `max_requests_per_second` configuration option to change this value (see below).
 
 </Callout>
 
@@ -37,5 +38,9 @@ spec:
   version: "VERSION_SOURCE_HUBSPOT" 
   destinations: ["postgresql"]
   tables: ["*"]
+  
   spec:
+    # optional, default is 5.
+    # See https://developers.hubspot.com/docs/api/usage-details#rate-limits
+    max_requests_per_second: 5
 ```
