Apply suggestions from code review
Co-authored-by: Herman Schaaf <hermanschaaf@gmail.com>

--- a/website/pages/docs/plugins/destinations/kafka/overview.mdx
+++ b/website/pages/docs/plugins/destinations/kafka/overview.mdx
@@ -62,4 +62,4 @@ This is the (nested) plugin spec
 
 - `include_headers` (bool) (optional) (default: true)
 
-  Specifies if the first header of a file should be the headers.  
+  Specifies if the first line of a file should be the headers (when format is `csv`).
