--- a/website/pages/docs/plugins/destinations/s3/overview.mdx
+++ b/website/pages/docs/plugins/destinations/s3/overview.mdx
@@ -68,4 +68,4 @@ This is the (nested) spec used by the CSV destination Plugin.
 
 - `include_headers` (bool) (optional) (default: true)
 
-  Specifies if the first header of a file should be the headers.
+  Specifies if the first line of a file should be the headers (when format is `csv`).
