--- a/website/pages/docs/plugins/destinations/gcs/overview.mdx
+++ b/website/pages/docs/plugins/destinations/gcs/overview.mdx
@@ -58,6 +58,6 @@ This is the (nested) spec used by the CSV destination Plugin.
 
   Character that will be used as want to use as the delimiter if the format type is `csv`
 
-- `include_headers` (bool) (optional) (default: true)
+- `skip_header` (bool) (optional) (default: false)
 
   Specifies if the first line of a file should be the headers (when format is `csv`).
