--- a/website/pages/docs/plugins/destinations/gcs/overview.mdx
+++ b/website/pages/docs/plugins/destinations/gcs/overview.mdx
@@ -48,8 +48,7 @@ This is the (nested) spec used by the CSV destination Plugin.
 
   Format of the output file. `json` and `csv` are supported.
 
-- `format_spec` (map [format_spec](#format_spec)) (default: current account)
-
+- `format_spec` (map [format_spec](#format_spec)) (optional)
   Optional parameters to change the format of the file
 
 ## format_spec
