--- a/website/pages/how-to-guides/simple-analytics-to-bigquery.mdx
+++ b/website/pages/how-to-guides/simple-analytics-to-bigquery.mdx
@@ -14,7 +14,7 @@ import { HowToGuideHeader } from "../../components/HowToGuideHeader"
 
 In this how-to guide, we will show you how you can load page views and events from Simple Analytics into BigQuery on regular schedule. We will use GitHub Actions to automate the process. This is a very convenient, simple and serverless way to load data into BigQuery.
 
-## Step 0: Prerequisites
+## Prerequisites
 
 Before we start, to follow this guide you will need the following:
 
@@ -25,7 +25,7 @@ Before we start, to follow this guide you will need the following:
 
 Now, let's get started!
 
-## Step 1: Set up the GitHub repository
+## Step 1: Add Workflow Configuration to the GitHub repository
 
 ### Step 1.1: Add the workflow file
 
@@ -125,13 +125,15 @@ spec:
     dataset_id: ${SA_BIGQUERY_DATASET_ID}
 ```
 
-You can find the latest version in the [BigQuery destination plugin documentation](https://www.cloudquery.io/docs/plugins/destinations/bigquery/overview). There are also a few more configuration options you may want to consider, like partitioning.
+You can find the latest version in the [BigQuery destination plugin documentation](https://www.cloudquery.io/docs/plugins/destinations/bigquery/overview). There are also a few more configuration options you may want to consider, like partitioning based on sync time.
 
-### Push to the repository
+### Step 1.5: Push to the repository
 
-With all this in place, make sure you to push the files to the GitHub repo. You can now run the workflow manually by going to `Actions > Sync Simple Analytics to BigQuery > Run workflow` and clicking the `Run workflow` button. It won't work yet, because we still need to set up the Workload Identity to authenticate with BigQuery.
+With all this in place, make sure you to push the files to the GitHub repo. You can now run the workflow manually by going to `Actions > Sync Simple Analytics to BigQuery > Run workflow` and clicking the `Run workflow` button. It will run, but probably end with an error, because we still need to set up the Workload Identity to authenticate with BigQuery. Let's do that next.
 
 ## Step 2: Set up Workload Identity
+
+In this section, we will set up Workload Identity to allow the GitHub Actions runner to authenticate with BigQuery. This is required because the GitHub Actions runner is a self-hosted runner, which is not part of the Google Cloud project. We will use the [google-github-actions/auth](https://github.com/google-github-actions/auth) and the steps in this guide are based on the instructions there, but fine-tuned for our use case.
 
 ### Step 2.1: Set Environment Variables
 
@@ -228,5 +230,59 @@ SELECT * FROM `cq-analytics-v1.simple_analytics.simple_analytics_page_views` LIM
 
 ![BigQuery query results](/images/how-to-guides/simple-analytics-to-bigquery/querying-simple-analytics-from-bigquery.png)
 
+Nice, we have raw Simple Analytics data in BigQuery! We can now use this data to build dashboards, reports, and more. The GitHub Action will run daily, so the data will be kept up to date automatically.
+
+## Step 4: Post-processing the data (Optional)
+
+Now that we have extracted and loaded our data into BigQuery, we may also want to do the "T" part of ELT: transformation as a post-processing step. For example, because the BigQuery destination only supports `append` mode, we should make sure that our query results don't contain duplicates. One simple way to do this is to run a SQL to remove duplicates after the sync completes. We can do this by adding a few additional steps to the workflow that run deduplication queries as SQL.
+
+Let's first write the queries. First we'll create `deduplicate_page_views.sql`:
+
+```sql copy
+CREATE
+OR REPLACE TABLE `simple_analytics`.`simple_analytics_page_views` AS
+SELECT
+    *
+FROM
+    `simple_analytics`.`simple_analytics_page_views`
+WHERE
+    _cq_sync_time = (
+    SELECT
+    max(_cq_sync_time)
+    FROM
+    `simple_analytics`.`simple_analytics_page_views`
+    );
+```
+
+And similarly, we'll create `deduplicate_events.sql`:
+
+```sql copy
+CREATE
+OR REPLACE TABLE `simple_analytics`.`simple_analytics_events` AS
+SELECT
+    *
+FROM
+    `simple_analytics`.`simple_analytics_events`
+WHERE
+    _cq_sync_time = (
+    SELECT
+    max(_cq_sync_time)
+    FROM
+    `simple_analytics`.`simple_analytics_events`
+    );
+```
+
+Now we can add these queries to the workflow. We'll add a few steps to the workflow to install the `bq` tool and run the queries:
+
+```yaml copy
+  - name: Set up Cloud SDK
+    uses: 'google-github-actions/setup-gcloud@v1'
+  - name: Deduplicate page views
+    run: bq query --use_legacy_sql=False --flagfile deduplicate_page_views.sql
+  - name: Deduplicate events
+    run: bq query --use_legacy_sql=False --flagfile deduplicate_events.sql
+```
+
 ## Conclusion
 
+That's it! Now we have a fully automated pipeline that extracts data from Simple Analytics, loads it into BigQuery, and deduplicates it on a regular basis. We can now use this data to build dashboards, reports, and more.
