--- a/website/pages/how-to-guides/simple-analytics-to-bigquery.mdx
+++ b/website/pages/how-to-guides/simple-analytics-to-bigquery.mdx
@@ -12,7 +12,7 @@ import { HowToGuideHeader } from "../../components/HowToGuideHeader"
 
 ## Introduction
 
-In this how-to guide, we will show you how you can load page views and events from Simple Analytics into BigQuery on regular schedule. We will use GitHub Actions to automate the process. This is a very convenient, simple and serverless way to load data into BigQuery.
+In this how-to guide, we will show you how you can load page views and events from Simple Analytics into BigQuery on regular schedule. We will use GitHub Actions to automate the process. This is a very convenient, simple and reliable way to load data into BigQuery.
 
 ## Prerequisites
 
