--- a/website/pages/docs/plugins/destinations/gcs/overview.mdx
+++ b/website/pages/docs/plugins/destinations/gcs/overview.mdx
@@ -47,3 +47,16 @@ This is the (nested) spec used by the CSV destination Plugin.
 - `format` (string) (required)
 
   Format of the output file. `json` and `csv` are supported.
+
+- `format_spec` (map [format_spec](#format_spec)) (optional)
+  Optional parameters to change the format of the file
+
+## format_spec
+
+- `delimiter` (string) (optional) (default: `,`)
+
+  Character that will be used as want to use as the delimiter if the format type is `csv`
+
+- `skip_header` (bool) (optional) (default: false)
+
+  Specifies if the first line of a file should be the headers (when format is `csv`).
