--- a/website/pages/docs/plugins/destinations/s3/overview.mdx
+++ b/website/pages/docs/plugins/destinations/s3/overview.mdx
@@ -48,10 +48,23 @@ This is the (nested) spec used by the CSV destination Plugin.
 
   Path to where the files will be uploaded in the above bucket. The path supports two placeholder variables: `{{TABLE}}` will be replaced with the table name, and `{{UUID}}` with a random UUID to uniquely identify each file. 
 
+- `athena` (boolean) (optional, default `false`)
+
+  When `athena` is set to `true`, the S3 plugin will sanitize keys in JSON columns to be compatible with the Hive Metastore / Athena. This allows tables to be created with a Glue Crawler and then queried via Athena, without changes to the table schema.
+
 - `format` (string) (required)
 
   Format of the output file. `json` and `csv` are supported.
 
-- `athena` (boolean) (optional, default `false`)
+- `format_spec` (map [format_spec](#format_spec)) (optional)
+  Optional parameters to change the format of the file
 
-  When `athena` is set to `true`, the S3 plugin will sanitize keys in JSON columns to be compatible with the Hive Metastore / Athena. This allows tables to be created with a Glue Crawler and then queried via Athena, without changes to the table schema.
+## format_spec
+
+- `delimiter` (string) (optional) (default: `,`)
+
+  Character that will be used as want to use as the delimiter if the format type is `csv`
+
+- `skip_header` (bool) (optional) (default: false)
+
+  Specifies if the first line of a file should be the headers (when format is `csv`).
