--- a/website/pages/docs/plugins/destinations/gcs/overview.mdx
+++ b/website/pages/docs/plugins/destinations/gcs/overview.mdx
@@ -28,6 +28,8 @@ spec:
     bucket: "bucket_name"
     path: "path/to/files"
     format: "csv"
+    format_spec:
+      delimiter: ","
 ```
 
 The GCS destination utilizes batching, and supports [`batch_size`](/docs/reference/destination-spec#batch_size) and [`batch_size_bytes`](/docs/reference/destination-spec#batch_size_bytes).
