--- a/website/pages/docs/plugins/sources/launchdarkly/overview.mdx
+++ b/website/pages/docs/plugins/sources/launchdarkly/overview.mdx
@@ -9,7 +9,7 @@ The CloudQuery LaunchDarkly plugin pulls data from LaunchDarkly and loads it int
 
 ## Authentication
 
-In order to fetch information from LaunchDarkly, `cloudquery` needs to be authenticated using a [Service Account](https://developer.launchdarkly.com/reference/service-accounts) from your LaunchDarkly account. You can view and manage your access tokens in LaunchDarkly `Account settings > Authorization`. Refer to [REST API Authentication](https://apidocs.launchdarkly.com/#section/Overview/Authentication) for more information.
+In order to fetch information from LaunchDarkly, `cloudquery` needs to be authenticated using an Access Token from your LaunchDarkly account. You can view and manage your access tokens in LaunchDarkly `Account settings > Authorization`. Refer to [REST API Authentication](https://apidocs.launchdarkly.com/#section/Overview/Authentication) for more information.
 
 ### Access Token API Version
 
