--- a/website/pages/how-to-guides/query-aws-cost-and-usage-athena.mdx
+++ b/website/pages/how-to-guides/query-aws-cost-and-usage-athena.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to Enrich AWS Cost and Usage Data with Infrastructure data with Amazon Athena
+title: How to Enrich AWS Cost and Usage Data with Infrastructure data in Amazon Athena
 tag: tutorial
 description: >-
   How to Query and Correlate AWS Cost and Usage Data with CloudQuery synced data from AWS.
