--- a/website/pages/docs/plugins/sources/k8s/overview.mdx
+++ b/website/pages/docs/plugins/sources/k8s/overview.mdx
@@ -20,9 +20,9 @@ file (`~/.kube/config`). You can also specify a different configuration by setti
 export KUBECONFIG=<PATH_TO_YOUR_CONFIG_FILE>
 ```
 
-If `cloudquery` is running in a pod of the Kubernetes cluster whose information will be synced, the k8s serviceaccount can be used for authentication directly.
-First, create a cluster role named cloudquery-cluster-read with all get and list privliages of all resources.
-And then create a cluster role binding for the cluster role and the service acccount the `cloudquery` pod use.
+If `cloudquery` is running in a pod of the Kubernetes cluster whose information will be synced, the K8s service account can be used for authentication directly.
+First, create a cluster role named `cloudquery-cluster-read` with all get and list privileges of all resources.
+Then create a cluster role binding for the cluster role and the service account for the `cloudquery` pod to use.
 ```
 $ kubectl apply -f - <<EOF
 apiVersion: rbac.authorization.k8s.io/v1
