fix(website): Add missing copy blocks

--- a/website/pages/docs/advanced-topics/performance-tuning.mdx
+++ b/website/pages/docs/advanced-topics/performance-tuning.mdx
@@ -40,7 +40,7 @@ Some tables require many API calls to sync. This is especially true of tables th
 
 Let's say we have three tables: `A`, `B` and `C`. `A` is the top-level table. `B` depends on it, and `C` depends on `B`:
 
-```text
+```text copy
 A 
 ↳ B
   ↳ C
