--- a/website/pages/docs/plugins/sources/datadog/overview.mdx
+++ b/website/pages/docs/plugins/sources/datadog/overview.mdx
@@ -18,7 +18,7 @@ so, following the principle of the least privilege, it's recommended to grant it
 
 ### Find all not verified users
 
-```sql
+```sql copy
 SELECT 
     "attributes" ->> 'name' AS username
 FROM
