--- a/website/pages/docs/plugins/sources/gcp/overview.mdx
+++ b/website/pages/docs/plugins/sources/gcp/overview.mdx
@@ -41,6 +41,6 @@ On-premises or another cloud provider
 
 ### Find all buckets without uniform bucket-level access
 
-```sql
+```sql copy
 select project_id, name from gcp_storage_buckets where uniform_bucket_level_access->>'Enabled' = 'true';
 ```
