--- a/website/pages/how-to-guides/how-to-load-infrastructure-data-into-athena.mdx
+++ b/website/pages/how-to-guides/how-to-load-infrastructure-data-into-athena.mdx
@@ -43,7 +43,7 @@ To sync infrastructure data to S3, we will need an installation of the CloudQuer
 
 When this step is complete, you should be able to run `cloudquery --help` and see the help output:
 
-```bash
+```bash copy
 $ cloudquery --help
 CloudQuery CLI
 
