--- a/website/pages/docs/plugins/destinations/mongodb/overview.mdx
+++ b/website/pages/docs/plugins/destinations/mongodb/overview.mdx
@@ -18,7 +18,7 @@ Supported database versions:
 
 This example configures a MongoDB destination, located at `localhost:27017`. The (top level) spec section is described in the [Destination Spec Reference](/docs/reference/destination-spec).
 
-```yaml
+```yaml copy
 kind: destination
 spec:
   name: "mongodb"
