chore(website): Auto generation sources/destinations sidebar/tables

--- a/website/pages/docs/plugins/destinations/azblob/overview.mdx
+++ b/website/pages/docs/plugins/destinations/azblob/overview.mdx
@@ -1,3 +1,6 @@
+---
+name: Azure Blob Storage
+---
 # Azure Blob Storage Destination Plugin
 
 import { getLatestVersion } from "../../../../../utils/versions";
