--- a/website/pages/docs/plugins/destinations/csv/overview.mdx
+++ b/website/pages/docs/plugins/destinations/csv/overview.mdx
@@ -1,3 +1,7 @@
+---
+name: CSV (Deprecated)
+stage: Deprecated(Use File)
+---
 # CSV Destination Plugin
 
 import { getLatestVersion } from "../../../../../utils/versions";
