--- a/website/pages/docs/plugins/destinations/gcs/overview.mdx
+++ b/website/pages/docs/plugins/destinations/gcs/overview.mdx
@@ -1,3 +1,6 @@
+---
+name: GCS
+---
 # GCS (Google Cloud Storage) Destination Plugin
 
 import { getLatestVersion } from "../../../../../utils/versions";
