--- a/website/pages/docs/plugins/destinations/postgresql/overview.mdx
+++ b/website/pages/docs/plugins/destinations/postgresql/overview.mdx
@@ -1,3 +1,7 @@
+---
+name: PostgreSQL
+stage: GA
+---
 # PostgreSQL Destination Plugin
 
 import { getLatestVersion } from "../../../../../utils/versions";
