--- a/website/pages/docs/plugins/sources/digitalocean/overview.mdx
+++ b/website/pages/docs/plugins/sources/digitalocean/overview.mdx
@@ -1,3 +1,7 @@
+---
+name: DigitalOcean
+stage: GA
+---
 # DigitalOcean Source Plugin
 
 import { getLatestVersion } from "../../../../../utils/versions";
