--- a/website/pages/docs/plugins/sources/k8s/overview.mdx
+++ b/website/pages/docs/plugins/sources/k8s/overview.mdx
@@ -1,4 +1,7 @@
-# K8s Source Plugin
+---
+name: Kubernetes
+---
+# Kubernetes Source Plugin
 
 import { getLatestVersion } from "../../../../../utils/versions";
 import { Badge } from "../../../../../components/Badge";
