chore(docs): GCP -> BigQuery

--- a/website/pages/docs/plugins/destinations/bigquery/overview.mdx
+++ b/website/pages/docs/plugins/destinations/bigquery/overview.mdx
@@ -47,7 +47,7 @@ Note that the BigQuery plugin only supports the `append` write mode.
 
 ## Authentication
 
-The GCP plugin authenticates using your [Application Default Credentials](https://cloud.google.com/sdk/gcloud/reference/auth/application-default). Available options are all the same options described [here](https://cloud.google.com/docs/authentication/provide-credentials-adc) in detail:
+The BigQuery plugin authenticates using your [Application Default Credentials](https://cloud.google.com/sdk/gcloud/reference/auth/application-default). Available options are all the same options described [here](https://cloud.google.com/docs/authentication/provide-credentials-adc) in detail:
 
 Local Environment:
 
